--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Calculator" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.Calculator" parent="Theme.Material3.DayNight">
+         <item name="colorPrimary">@color/calculator_light_primary</item>
+        <item name="colorPrimaryVariant">#B5926E</item>
+        <item name="android:textColor">@color/calculator_text_color</item>
     </style>
 
     <style name="Theme.Calculator" parent="Base.Theme.Calculator" />
