--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Calculator" parent="Theme.Material3.DayNight">
+        <item name="calculateButtonColor">@color/calculate_button_light_color</item>
     </style>
 
     <style name="Theme.Calculator" parent="Base.Theme.Calculator" />
